updated index content

--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
         <div class="container px-md-5">
           <div class="row">
             <div class="col-md-9 col-lg-7">
-              <h1 class="fs-4 fs-md-6 fs-xl-7 mb-5 mb-lg-0 position-relative z-index-2">Fotogency <span class="fw-thin text-300">deals with first class </span><span class="text-400">photography  orphan services.</span></h1>
+              <h1 class="fs-4 fs-md-6 fs-xl-7 mb-5 mb-lg-0 position-relative z-index-2">McCall Southern <span class="fw-thin text-300">offers first class </span><span class="text-400">photography services.</span></h1>
             </div>
           </div>
           <div class="row mt-md-n6">
@@ -117,8 +117,8 @@
                 <div class="img-circle-2 p-5 p-md-7 rounded-circle"></div>
               </div>
               <div class="position-absolute bottom-n100 col-11 mt-6 d-none d-md-block">
-                <p class="fs-2 lh-1 text-400">There are many variations of passages of Lorem Ipsum available, but the majority </p>
-                <p class="text-300">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,</p>
+                <p class="fs-2 lh-1 text-400">Capturing life's special moments, one frame at a time </p>
+                <p class="text-300">Welcome to McCall Southern Photography, where we believe that every moment is worth capturing. We are a team of passionate photographers who specialize in creating beautiful and timeless images that tell the story of your life.</p>
               </div>
               <div class="position-absolute start-0 bottom-0 d-lg-none"><a class="scroll-indicator text-warning" href="#footer"> <span>SCROLL </span><img src="assets/img/icons/long-arrow.png" alt="" /></a></div>
             </div>
