--- a/public/blog.html
+++ b/public/blog.html
@@ -49,7 +49,7 @@
         <div class="container px-md-5">
           <div class="row w-100 g-0 justify-content-between">
             <div class="col-8">
-              <div class="d-inline-block"><a class="navbar-brand pt-0 fs-3 text-black d-flex align-items-center" href="index.html"><img class="img-fluid" src="assets/img/icons/logo-icon.png" alt="" /><span class="fw-bolder ms-2">Foto</span><span class="fw-thin">gency</span></a></div>
+              <div class="d-inline-block"><a class="navbar-brand pt-0 fs-3 text-black d-flex align-items-center" href="index.html"><img class="img-fluid" src="assets/img/icons/logo-icon.png" alt="" /><span class="fw-bolder ms-2">McCall Southern</span><span class="fw-thin">Photography</span></a></div>
               <div class="mt-4 d-none d-lg-block">
                 <h1 class="text-uppercase fs-lg-7 fs-5 fw-bolder text-300 lh-1 position-relative z-index-0">Blog</h1>
                 <h1 class="d-none d-md-block fw-bolder text-outlined fs-7 text-white lh-1 mt-n4 position-relative z-index--1">Recent update</h1>
@@ -89,6 +89,10 @@
                     <li class="nav-item px-2 position-relative"><a class="nav-link pt-0" aria-current="page" href="exhibitions.html">Exhibitions</a></li>
                     <li class="nav-item px-2 position-relative"><a class="nav-link pt-0" aria-current="page" href="about.html">About</a></li>
                     <li class="nav-item px-2 position-relative"><a class="nav-link pt-0 active" aria-current="page" href="blog.html">Blog</a></li>
+
+                    <li class="nav-item px-2 position-relative"><a class="nav-link pt-0" aria-current="page" href="blog.html">Services</a></li>
+                    <li class="nav-item px-2 position-relative"><a class="nav-link pt-0" aria-current="page" href="blog.html">Testimonials</a></li>
+                    <li class="nav-item px-2 position-relative"><a class="nav-link pt-0" aria-current="page" href="blog.html">Prices</a></li>
                   </ul>
                 </div>
               </div>
@@ -112,15 +116,15 @@
               <div class="card border-0 mb-3"><img class="card-img-top" src="assets/img/blogs/img1.png" alt="" />
                 <div class="d-flex align-items-center justify-content-between">
                   <div class="d-flex align-items-center"> <span class="fa-solid fa-circle-dot text-warning"></span>
-                    <p class="text-300 m-0 ps-1">6min read</p>
+                    <p class="text-300 m-0 ps-1">4min read</p>
                   </div>
                   <div class="bg-warning p-2 text-center opacity-50">
-                    <p class="text-white mb-0">color and light</p>
+                    <p class="text-white mb-0"></p>
                   </div>
                 </div>
                 <div class="mt-4">
-                  <h5 class="mb-3">Simply dummy text of the printing and typesetting.</h5>
-                  <p class="text-200 m-0 mb-3">By - <span class="text-300 fw-bold">Frederico giuspam</span></p>
+                  <h5 class="mb-3">Setting Up & Breaking Down</h5>
+                  <p class="text-200 m-0 mb-3">By - <span class="text-300 fw-bold">Michael Lurie</span></p>
                   <p class="mb-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some</p>
                   <button class="btn btn-link text-warning p-0"><span class="fw-medium">Read full article</span><img class="ms-3" src="assets/img/icons/long-arrow.png" alt="" /></button>
                 </div>
@@ -133,12 +137,12 @@
                     <p class="text-300 m-0 ps-1">6min read</p>
                   </div>
                   <div class="bg-warning p-2 text-center opacity-50">
-                    <p class="text-white mb-0">color and light</p>
+                    <p class="text-white mb-0"></p>
                   </div>
                 </div>
                 <div class="mt-4">
-                  <h5 class="mb-3">Simply dummy text of the printing and typesetting.</h5>
-                  <p class="text-200 m-0 mb-3">By - <span class="text-300 fw-bold">Frederico giuspam</span></p>
+                  <h5 class="mb-3">Lights. Lights. Lights.</h5>
+                  <p class="text-200 m-0 mb-3">By - <span class="text-300 fw-bold">Michael Lurie</span></p>
                   <p class="mb-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some</p>
                   <button class="btn btn-link text-warning p-0"><span class="fw-medium">Read full article</span><img class="ms-3" src="assets/img/icons/long-arrow.png" alt="" /></button>
                 </div>
@@ -148,15 +152,15 @@
               <div class="card border-0 mb-3"><img class="card-img-top" src="assets/img/blogs/img3.png" alt="" />
                 <div class="d-flex align-items-center justify-content-between">
                   <div class="d-flex align-items-center"> <span class="fa-solid fa-circle-dot text-warning"></span>
-                    <p class="text-300 m-0 ps-1">6min read</p>
+                    <p class="text-300 m-0 ps-1">5min read</p>
                   </div>
                   <div class="bg-warning p-2 text-center opacity-50">
-                    <p class="text-white mb-0">color and light</p>
+                    <p class="text-white mb-0"></p>
                   </div>
                 </div>
                 <div class="mt-4">
-                  <h5 class="mb-3">Simply dummy text of the printing and typesetting.</h5>
-                  <p class="text-200 m-0 mb-3">By - <span class="text-300 fw-bold">Frederico giuspam</span></p>
+                  <h5 class="mb-3">A Picture is Worth a Thousand Words</h5>
+                  <p class="text-200 m-0 mb-3">By - <span class="text-300 fw-bold">Michael Lurie</span></p>
                   <p class="mb-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some</p>
                   <button class="btn btn-link text-warning p-0"><span class="fw-medium">Read full article</span><img class="ms-3" src="assets/img/icons/long-arrow.png" alt="" /></button>
                 </div>
@@ -251,10 +255,10 @@
       <div class="container py-7 px-md-5">
         <div class="row g-0">
           <div class="col-md-6 mb-5 mb-md-0">
-            <div class="mb-4 d-inline-block"><a class="navbar-brand pt-0 fs-3 text-white d-flex align-items-center" href="index.html"><img class="img-fluid" src="assets/img/icons/dark-logo-icon.png" alt="" width="25" height="25" /><span class="fw-bolder ms-2">Foto</span><span class="fw-thin">gency</span></a></div>
-            <div class="col-12 col-md-10 text-300 mb-3"><i class="fas fa-map-marker-alt"></i><a class="nav-link text-300 d-inline" href="https://www.google.com/maps/place/2109+WS+09+Oxford+Rd+%23127+ParkVilla+Hills,+">2109 WS 09 Oxford Rd #127 ParkVilla Hills, MI 48334</a></div>
-            <div class="col-12 col-md-10 text-300 mb-3"><i class="fas fa-phone"></i><a class="nav-link text-300 d-inline" href="tel:+8801976476893">+88 019 76456893</a></div>
-            <div class="col-12 col-md-10 text-300 mb-3"><i class="fas fa-envelope"></i><a class="nav-link text-300 d-inline" href="mailto:scrscrumbledegg@gmail.com">scrumbledegg@gmail.com</a></div>
+            <div class="mb-4 d-inline-block"><a class="navbar-brand pt-0 fs-3 text-white d-flex align-items-center" href="index.html"><img class="img-fluid" src="assets/img/icons/dark-logo-icon.png" alt="" width="25" height="25" /><span class="fw-bolder ms-2">McCall Southern</span><span class="fw-thin">Photography</span></a></div>
+            <div class="col-12 col-md-10 text-300 mb-3"><i class="fas fa-map-marker-alt"></i><a class="nav-link text-300 d-inline" href="https://www.google.com/maps/place/San+Antonio,+TX/@29.458472,-98.6791838,11z/data=!3m1!4b1!4m6!3m5!1s0x865c58af04d00eaf:0x856e13b10a016bc!8m2!3d29.4251905!4d-98.4945922!16zL20vMGYydzA?entry=ttu" target="_blank">San Antonio, Texas</a></div>
+            <div class="col-12 col-md-10 text-300 mb-3"><i class="fas fa-phone"></i><a class="nav-link text-300 d-inline" href="tel:+2101234567" target="_blank">(210)123-4567</a></div>
+            <div class="col-12 col-md-10 text-300 mb-3"><i class="fas fa-envelope"></i><a class="nav-link text-300 d-inline" href="mailto:info@mccallsouthernphotography.com" target="_blank">info@mccallsouthernphotography.com</a></div>
           </div>
           <div class="col-md-6">
             <h5 class="text-white mb-2">SUBSCRIBE TO OUR NEWSLETTER</h5>
@@ -282,14 +286,7 @@
       <div class="container px-md-5">
         <div class="row g-0 justify-content-md-between justify-content-evenly py-4">
           <div class="col-12 col-sm-8 col-md-6 col-lg-auto text-center text-md-start">
-            <p class="fs--1 my-2 fw-light text-100">All rights Reserved &copy; Your Company, 2022</p>
-          </div>
-          <div class="col-12 col-sm-8 col-md-6">
-            <p class="fs--1 fw-light my-2 text-center text-md-end text-100"> Made with&nbsp;
-              <svg class="bi bi-suit-heart-fill" xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="#F95C19" viewBox="0 0 16 16">
-                <path d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z"></path>
-              </svg>&nbsp;by&nbsp;<a class="fw-bold text-warning" href="https://themewagon.com/" target="_blank">ThemeWagon</a>
-            </p>
+            <p class="fs--1 my-2 fw-light text-100">All rights Reserved &copy; McCall Southern Photography, 2024</p>
           </div>
         </div>
       </div>
