--- a/public/services.html
+++ b/public/services.html
@@ -10,7 +10,7 @@
     <!-- ===============================================-->
     <!--    Document Title-->
     <!-- ===============================================-->
-    <title>Exhibitions | Online &amp; Offline</title>
+    <title>Services | Online &amp; Offline</title>
 
 
     <!-- ===============================================-->
@@ -51,7 +51,7 @@
             <div class="col-8">
               <div class="d-inline-block"><a class="navbar-brand pt-0 fs-3 text-black d-flex align-items-center" href="index.html"><img class="img-fluid" src="assets/img/icons/logo-icon.png" alt="" /><span class="fw-bolder ms-2">Foto</span><span class="fw-thin">gency</span></a></div>
               <div class="mt-4 d-none d-lg-block">
-                <h1 class="text-uppercase fs-lg-7 fs-5 fw-bolder text-300 lh-1 position-relative z-index-0">Exhibitions</h1>
+                <h1 class="text-uppercase fs-lg-7 fs-5 fw-bolder text-300 lh-1 position-relative z-index-0">Services</h1>
                 <h1 class="d-none d-md-block fw-bolder text-outlined fs-7 text-white lh-1 mt-n4 position-relative z-index--1">Online &amp; Offline</h1>
               </div>
             </div>
@@ -72,6 +72,10 @@
                     <li class="nav-item"><a class="nav-link d-inline-block nav-text-outlined lh-1 text-white fs-5 active" aria-current="page" href="exhibitions.html">Exhibitions</a></li>
                     <li class="nav-item"><a class="nav-link d-inline-block nav-text-outlined lh-1 text-white fs-5" aria-current="page" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link d-inline-block nav-text-outlined lh-1 text-white fs-5" aria-current="page" href="blog.html">Blog</a></li>
+
+                    <li class="nav-item"><a class="nav-link d-inline-block nav-text-outlined lh-1 text-white fs-5" aria-current="page" href="services.html">Services</a></li>
+                    <li class="nav-item"><a class="nav-link d-inline-block nav-text-outlined lh-1 text-white fs-5" aria-current="page" href="testimonials.html">Testimonials</a></li>
+                    <li class="nav-item"><a class="nav-link d-inline-block nav-text-outlined lh-1 text-white fs-5" aria-current="page" href="prices.html">Prices</a></li>
                   </ul>
                 </div>
               </div>
@@ -79,7 +83,7 @@
             <div class="col-4">
               <div class="d-none d-lg-flex justify-content-end position-relative z-index-1">
                 <div class="position-absolute absolute-centered z-index--1">
-                  <h1 class="ms-2 fw-bolder text-outlined text-uppercase text-white pe-none display-1">Exhibitions</h1>
+                  <h1 class="ms-2 fw-bolder text-outlined text-uppercase text-white pe-none display-1">Services</h1>
                 </div>
                 <div class="d-flex gap-3 align-items-start"><a class="mb-0 ms-auto text-warning fs-0 fw-bold text-uppercase" href="blog.html#contact">Contact Now</a>
                   <ul class="navbar-nav navbar-fotogency ms-auto text-end">
@@ -89,13 +93,17 @@
                     <li class="nav-item px-2 position-relative"><a class="nav-link pt-0 active" aria-current="page" href="exhibitions.html">Exhibitions</a></li>
                     <li class="nav-item px-2 position-relative"><a class="nav-link pt-0" aria-current="page" href="about.html">About</a></li>
                     <li class="nav-item px-2 position-relative"><a class="nav-link pt-0" aria-current="page" href="blog.html">Blog</a></li>
+
+                    <li class="nav-item px-2 position-relative"><a class="nav-link pt-0" aria-current="page" href="services.html">Services</a></li>
+                    <li class="nav-item px-2 position-relative"><a class="nav-link pt-0" aria-current="page" href="testimonials.html">Testimonials</a></li>
+                    <li class="nav-item px-2 position-relative"><a class="nav-link pt-0" aria-current="page" href="prices.html">Prices</a></li>
                   </ul>
                 </div>
               </div>
             </div>
           </div>
           <div class="row g-0 mt-4 d-lg-none">
-            <h1 class="text-uppercase ps-0 fs-lg-7 fs-5 fw-bolder text-300 lh-1 position-relative z-index-0">Exhibitions</h1>
+            <h1 class="text-uppercase ps-0 fs-lg-7 fs-5 fw-bolder text-300 lh-1 position-relative z-index-0">Services</h1>
             <h1 class="fw-bolder text-outlined ps-0 fs-lg-7 fs-sm-6 fs-5 text-white lh-1 mt-sm-n4 mt-n3 position-relative z-index--1">Online &amp; Offline</h1>
           </div>
         </div>
