--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -126,13 +126,14 @@
                         <div class="col-xl-7">
                           <div class="position-relative">
                             <div class="position-absolute start-0 bottom-0 ms-3">
-                              <h3 class="text-white">Mogadisu Somalia</h3>
-                              <p class="text-300">Shooting and Advertisement Campaign</p>
+                              <h3 class="text-white">Walking Out</h3>
+                              <p class="text-300">by: Jessica Wanda</p>
                             </div><img class="portfolio-img img-fluid" src="assets/img/portfolio/img01.png" alt="" />
                           </div>
                         </div>
                         <div class="col-xl-4 mt-4">
-                          <p class="fs-0">I a genre of Japanese art that became popular in the 17th century through to the 19th century. The word roughly translates as “pictures of the floating world” and artists belonging to the movement produced woodblock prints and paintings of scenes from history and folktales, sumo wrestlers, landscapes of flora and fauna, and a touch of erotica.</p>
+                          <p class="fs-0">
+                            A captivating image captures a person defying gravity, seemingly walking on water. The surreal scene evokes wonder, blending the boundaries between reality and fantasy.</p>
                         </div>
                       </div>
                     </div>
@@ -141,13 +142,13 @@
                         <div class="col-xl-7">
                           <div class="position-relative">
                             <div class="position-absolute start-0 bottom-0 ms-3">
-                              <h3 class="text-white">Mogadisu Somalia</h3>
-                              <p class="text-300">Shooting and Advertisement Campaign</p>
+                              <h3 class="text-white">Masking Around</h3>
+                              <p class="text-300">by: Roland Keith</p>
                             </div><img class="portfolio-img img-fluid" src="assets/img/portfolio/img02.png" alt="" />
                           </div>
                         </div>
                         <div class="col-xl-4 mt-4">
-                          <p class="fs-0">I a genre of Japanese art that became popular in the 17th century through to the 19th century. The word roughly translates as “pictures of the floating world” and artists belonging to the movement produced woodblock prints and paintings of scenes from history and folktales, sumo wrestlers, landscapes of flora and fauna, and a touch of erotica.</p>
+                          <p class="fs-0">An individual wears an elaborate COVID-19 mask extending from chin to the back of their head. A unique and comprehensive protective measure, symbolizing the commitment to safety.</p>
                         </div>
                       </div>
                     </div>
@@ -156,13 +157,13 @@
                         <div class="col-xl-7">
                           <div class="position-relative">
                             <div class="position-absolute start-0 bottom-0 ms-3">
-                              <h3 class="text-white">Mogadisu Somalia</h3>
-                              <p class="text-300">Shooting and Advertisement Campaign</p>
+                              <h3 class="text-white">Aura</h3>
+                              <p class="text-300">by: John Brown</p>
                             </div><img class="portfolio-img img-fluid" src="assets/img/portfolio/img03.png" alt="" />
                           </div>
                         </div>
                         <div class="col-xl-4 mt-4">
-                          <p class="fs-0">I a genre of Japanese art that became popular in the 17th century through to the 19th century. The word roughly translates as “pictures of the floating world” and artists belonging to the movement produced woodblock prints and paintings of scenes from history and folktales, sumo wrestlers, landscapes of flora and fauna, and a touch of erotica.</p>
+                          <p class="fs-0">A mysterious figure conceals their identity behind a wrapped face adorned with leaves. The photo exudes an enigmatic aura, blending nature and disguise in a captivating composition.</p>
                         </div>
                       </div>
                     </div>
