--- a/public/exhibitions.html
+++ b/public/exhibitions.html
@@ -49,10 +49,9 @@
         <div class="container px-md-5">
           <div class="row w-100 g-0 justify-content-between">
             <div class="col-8">
-              <div class="d-inline-block"><a class="navbar-brand pt-0 fs-3 text-black d-flex align-items-center" href="index.html"><img class="img-fluid" src="assets/img/icons/logo-icon.png" alt="" /><span class="fw-bolder ms-2">Foto</span><span class="fw-thin">gency</span></a></div>
+              <div class="d-inline-block"><a class="navbar-brand pt-0 fs-3 text-black d-flex align-items-center" href="index.html"><img class="img-fluid" src="assets/img/icons/logo-icon.png" alt="" /><span class="fw-bolder ms-2">McCall Southern</span><span class="fw-thin">Photography</span></a></div>
               <div class="mt-4 d-none d-lg-block">
                 <h1 class="text-uppercase fs-lg-7 fs-5 fw-bolder text-300 lh-1 position-relative z-index-0">Exhibitions</h1>
-                <h1 class="d-none d-md-block fw-bolder text-outlined fs-7 text-white lh-1 mt-n4 position-relative z-index--1">Online &amp; Offline</h1>
               </div>
             </div>
             <div class="col-4 d-lg-none text-end pe-0">
@@ -104,7 +103,6 @@
           </div>
           <div class="row g-0 mt-4 d-lg-none">
             <h1 class="text-uppercase ps-0 fs-lg-7 fs-5 fw-bolder text-300 lh-1 position-relative z-index-0">Exhibitions</h1>
-            <h1 class="fw-bolder text-outlined ps-0 fs-lg-7 fs-sm-6 fs-5 text-white lh-1 mt-sm-n4 mt-n3 position-relative z-index--1">Online &amp; Offline</h1>
           </div>
         </div>
       </nav>
@@ -124,52 +122,48 @@
                     <div class="swiper-slide">
                       <div class="row align-items-xl-center">
                         <div class="col-lg-5"><img class="img-fluid w-100" src="assets/img/exhibitions/img01.png" alt="" />
-                          <div class="position-absolute top-5 start-5 mt-n1 d-flex flex-column align-items-center"><span class="rounded-circle bg-white p-2 d-block"></span><span class="text-white fw-bold">2017</span></div>
+                          <div class="position-absolute top-5 start-5 mt-n1 d-flex flex-column align-items-center"><span class="rounded-circle bg-white p-2 d-block"></span><span class="text-white fw-bold">2020</span></div>
                         </div>
                         <div class="col-lg-6 col-xl-5 mt-4 mt-lg-0">
-                          <h1 class="fw-bolder mb-3">Through the Eyes of Kubrick</h1>
-                          <p class="text-warning fs-3 opacity-75">Individual</p>
-                          <p class="fs-0">s a genre of Japanese art that became popular in the 17th century through to the 19th century. The word roughly translates as “pictures of the floating world” and artists belonging to the movement produced woodblock prints and paintings of scenes from history and folktales, sumo wrestlers, landscapes of flora and fauna, and a touch of erotica.</p>
-                          <button class="btn btn-link text-warning p-0 fs-2"><span class="fw-bolder">Details </span><img class="ms-3" src="assets/img/icons/long-arrow.png" alt="" /></button>
+                          <h1 class="fw-bolder mb-3">Through the Eyes of Givens</h1>
+                          <p class="text-warning fs-3 opacity-75">Diane Givens</p>
+                          <p class="fs-0">"Beauty is in the eye of the beholder." This piece embraces subjective aesthetics, inviting contemplation and appreciation.</p>
                         </div>
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="row align-items-xl-center">
                         <div class="col-lg-5"><img class="img-fluid w-100" src="assets/img/exhibitions/img02.png" alt="" />
-                          <div class="position-absolute top-5 start-5 mt-n1 d-flex flex-column align-items-center"><span class="rounded-circle bg-white p-2 d-block"></span><span class="text-white fw-bold">2015</span></div>
+                          <div class="position-absolute top-5 start-5 mt-n1 d-flex flex-column align-items-center"><span class="rounded-circle bg-white p-2 d-block"></span><span class="text-white fw-bold">2021</span></div>
                         </div>
                         <div class="col-lg-6 col-xl-5 mt-4 mt-lg-0">
-                          <h1 class="fw-bolder mb-3">Wave of Surrealism in photography</h1>
+                          <h1 class="fw-bolder mb-3">Array of Masterpieces</h1>
                           <p class="text-warning fs-3 opacity-75">Collective</p>
-                          <p class="fs-0">s a genre of Japanese art that became popular in the 17th century through to the 19th century. The word roughly translates as “pictures of the floating world” and artists belonging to the movement produced woodblock prints and paintings of scenes from history and folktales, sumo wrestlers, landscapes of flora and fauna, and a touch of erotica.</p>
-                          <button class="btn btn-link text-warning p-0 fs-2"><span class="fw-bolder">Details </span><img class="ms-3" src="assets/img/icons/long-arrow.png" alt="" /></button>
+                          <p class="fs-0">An art gallery, a sanctuary of creativity, showcases a diverse array of masterpieces. Illuminated spaces beckon contemplation, inviting visitors to immerse themselves in the rich tapestry of artistic expression.</p>
                         </div>
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="row align-items-xl-center">
                         <div class="col-lg-5"><img class="img-fluid w-100" src="assets/img/exhibitions/img03.png" alt="" />
-                          <div class="position-absolute top-5 start-5 mt-n1 d-flex flex-column align-items-center"><span class="rounded-circle bg-white p-2 d-block"></span><span class="text-white fw-bold">2015</span></div>
+                          <div class="position-absolute top-5 start-5 mt-n1 d-flex flex-column align-items-center"><span class="rounded-circle bg-white p-2 d-block"></span><span class="text-white fw-bold">2022</span></div>
                         </div>
                         <div class="col-lg-6 col-xl-5 mt-4 mt-lg-0">
-                          <h1 class="fw-bolder mb-3">Through the Eyes of Kubrick</h1>
-                          <p class="text-warning fs-3 opacity-75">Individual</p>
-                          <p class="fs-0">s a genre of Japanese art that became popular in the 17th century through to the 19th century. The word roughly translates as “pictures of the floating world” and artists belonging to the movement produced woodblock prints and paintings of scenes from history and folktales, sumo wrestlers, landscapes of flora and fauna, and a touch of erotica.</p>
-                          <button class="btn btn-link text-warning p-0 fs-2"><span class="fw-bolder">Details </span><img class="ms-3" src="assets/img/icons/long-arrow.png" alt="" /></button>
+                          <h1 class="fw-bolder mb-3">Essence of an Era</h1>
+                          <p class="text-warning fs-3 opacity-75">Michael Lurie</p>
+                          <p class="fs-0">A timeless pose etches itself into history, capturing the essence of an era. This iconic stance symbolizes cultural significance, resonating across time as the pose of the century.</p>
                         </div>
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="row align-items-xl-center">
                         <div class="col-lg-5"><img class="img-fluid w-100" src="assets/img/exhibitions/img04.png" alt="" />
-                          <div class="position-absolute top-5 start-5 mt-n1 d-flex flex-column align-items-center"><span class="rounded-circle bg-white p-2 d-block"></span><span class="text-white fw-bold">2015</span></div>
+                          <div class="position-absolute top-5 start-5 mt-n1 d-flex flex-column align-items-center"><span class="rounded-circle bg-white p-2 d-block"></span><span class="text-white fw-bold">2023</span></div>
                         </div>
                         <div class="col-lg-6 col-xl-5 mt-4 mt-lg-0">
-                          <h1 class="fw-bolder mb-3">Through the Eyes of Kubrick</h1>
-                          <p class="text-warning fs-3 opacity-75">Individual</p>
-                          <p class="fs-0">s a genre of Japanese art that became popular in the 17th century through to the 19th century. The word roughly translates as “pictures of the floating world” and artists belonging to the movement produced woodblock prints and paintings of scenes from history and folktales, sumo wrestlers, landscapes of flora and fauna, and a touch of erotica.</p>
-                          <button class="btn btn-link text-warning p-0 fs-2"><span class="fw-bolder">Details </span><img class="ms-3" src="assets/img/icons/long-arrow.png" alt="" /></button>
+                          <h1 class="fw-bolder mb-3">Nostalgia</h1>
+                          <p class="text-warning fs-3 opacity-75">John Brown</p>
+                          <p class="fs-0">An image with a retro vibe emanates contemporary nostalgia, blending modern aesthetics with a hint of vintage charm. Timeless style meets the present in this captivating visual fusion.</p>
                         </div>
                       </div>
                     </div>
