--- a/public/blog.html
+++ b/public/blog.html
@@ -129,7 +129,8 @@
                 <div class="mt-4">
                   <h5 class="mb-3">Setting Up & Breaking Down</h5>
                   <p class="text-200 m-0 mb-3">By - <span class="text-300 fw-bold">Michael Lurie</span></p>
-                  <p class="mb-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some</p>
+                  <p class="mb-3">Behind the lens: Setting up scenes with precision and breaking down barriers. Uncover the artistry and challenges of photography's dynamic process.
+                  </p>
                   <button class="btn btn-link text-warning p-0"><span class="fw-medium">Read full article</span><img class="ms-3" src="assets/img/icons/long-arrow.png" alt="" /></button>
                 </div>
               </div>
@@ -147,7 +148,8 @@
                 <div class="mt-4">
                   <h5 class="mb-3">Lights. Lights. Lights.</h5>
                   <p class="text-200 m-0 mb-3">By - <span class="text-300 fw-bold">Michael Lurie</span></p>
-                  <p class="mb-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some</p>
+                  <p class="mb-3">Unveiling the magic of photography through 'Lights. Lights. Lights.' Explore how light shapes captivating visuals, telling stories frame by frame.
+                  </p>
                   <button class="btn btn-link text-warning p-0"><span class="fw-medium">Read full article</span><img class="ms-3" src="assets/img/icons/long-arrow.png" alt="" /></button>
                 </div>
               </div>
@@ -165,7 +167,8 @@
                 <div class="mt-4">
                   <h5 class="mb-3">A Picture is Worth a Thousand Words</h5>
                   <p class="text-200 m-0 mb-3">By - <span class="text-300 fw-bold">Michael Lurie</span></p>
-                  <p class="mb-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some</p>
+                  <p class="mb-3">Delving into the profound language of images. Explore the storytelling magic of photography and how a single frame conveys countless narratives.
+                  </p>
                   <button class="btn btn-link text-warning p-0"><span class="fw-medium">Read full article</span><img class="ms-3" src="assets/img/icons/long-arrow.png" alt="" /></button>
                 </div>
               </div>
